--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,9 @@ body {
   color: #434455;
   background-color: #ffffff;
 }
-
+.img {
+  display: block;
+}
 .logo-header {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
