--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,15 @@ body {
 img {
   display: block;
 }
+.container {
+  width: 1158px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+.header-container {
+  display: flex;
+  align-items: center;
+}
 .logo-header {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
