--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,10 @@ img {
   display: flex;
   align-items: center;
 }
+.header {
+  border-bottom: 1px solid #e7e9fc;
+  display: flex;
+}
 .logo-header {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
