--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,10 @@ img {
   border-bottom: 1px solid #e7e9fc;
   display: flex;
 }
+.header-nav {
+  display: flex;
+  align-items: center;
+}
 .logo-header {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
