--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,7 @@ img {
 .header-nav {
   display: flex;
   align-items: center;
+  gap: 40px;
 }
 .logo-header {
   font-family: "Raleway", sans-serif;
