--- a/css/styles.css
+++ b/css/styles.css
@@ -55,8 +55,7 @@ img {
   color: #2e2f42;
   display: flex;
   gap: 40px;
-  padding-top: 24px;
-  padding-bottom: 24px;
+  padding: 24px 0;
 }
 
 .link {
