--- a/css/styles.css
+++ b/css/styles.css
@@ -100,6 +100,9 @@ img {
   font-size: 56px;
   line-height: 1.07;
   letter-spacing: 0.02em;
+  text-align: center;
+  max-width: 496px;
+  margin: 0 auto 48px;
 }
 
 .btn-banner {
