--- a/css/styles.css
+++ b/css/styles.css
@@ -106,14 +106,22 @@ img {
 }
 
 .btn-banner {
-  font-family: "Roboto", sans-serif;
   background: #4d5ae5;
+
+  font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
-  letter-spacing: 0.04em;
   line-height: 1.5;
-  color: #ffffff;
+  letter-spacing: 0.04em;
   cursor: pointer;
+  border-radius: 4px;
+  padding: 16px 32px 16px 32px;
+  border: none;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  display: block;
+  margin: 0 auto;
+  min-width: 169px;
+  color: #ffffff;
 }
 
 .hero .btn-banner:hover,
