--- a/css/styles.css
+++ b/css/styles.css
@@ -107,7 +107,6 @@ img {
 
 .btn-banner {
   background: #4d5ae5;
-
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
@@ -115,13 +114,14 @@ img {
   letter-spacing: 0.04em;
   cursor: pointer;
   border-radius: 4px;
-  padding: 16px 32px 16px 32px;
+  padding: 16px 32px;
   border: none;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   display: block;
   margin: 0 auto;
   min-width: 169px;
   color: #ffffff;
+  transition: background-color 0.3s ease, box-shadow 0.3s ease;
 }
 
 .hero .btn-banner:hover,
