--- a/css/styles.css
+++ b/css/styles.css
@@ -149,6 +149,9 @@ img {
   display: flex;
   gap: 24px;
 }
+.company__item {
+  width: 264px;
+}
 .example-header {
   font-family: Roboto;
   font-size: 20px;
@@ -158,7 +161,8 @@ img {
   text-align: left;
   color: #2e2f42;
 }
-.section-team {
+
+GGJGJ .section-team {
   background-color: #f4f4fd;
 }
 .card-title {
