--- a/css/styles.css
+++ b/css/styles.css
@@ -145,11 +145,10 @@ img {
   padding: 120px 0;
 }
 .features-list {
-  text-align: left;
   display: flex;
   gap: 24px;
 }
-.company__item {
+.feature-item {
   width: calc((100% - 72px) / 4);
 }
 .example-header {
@@ -160,7 +159,6 @@ img {
   letter-spacing: 0.02em;
   text-align: left;
   color: #2e2f42;
-  margin-bottom: 8px;
 }
 
 .section-team {
