--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ body {
   margin: -1px;
   border: 0;
   padding: 0;
-
+  margin-bottom: 8px;
   white-space: nowrap;
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
