--- a/css/styles.css
+++ b/css/styles.css
@@ -192,6 +192,7 @@ img {
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 
 .gallery-list-title {
