--- a/css/styles.css
+++ b/css/styles.css
@@ -161,7 +161,9 @@ img {
   color: #2e2f42;
   margin-bottom: 8px;
 }
-
+.feature-item {
+  width: calc((100% - 72px) / 4);
+}
 .section-team {
   background-color: #f4f4fd;
   padding: 120px 0;
