--- a/css/styles.css
+++ b/css/styles.css
@@ -187,6 +187,7 @@ img {
 .section-list {
   background-color: #ffffff;
   width: calc((100% - 72px) / 4);
+  border-radius: 0px 0px 4px 4px;
 }
 
 .section-title {
