--- a/css/styles.css
+++ b/css/styles.css
@@ -208,8 +208,7 @@ img {
   letter-spacing: 0.02em; /* Відстань між літерами */
   color: #2e2f42; /* Колір тексту */
 }
-
-.gallery-list-text {
+fhf .gallery-list-text {
   color: #434455;
 }
 
