--- a/css/styles.css
+++ b/css/styles.css
@@ -176,7 +176,9 @@ img {
   letter-spacing: 0.02em; /* Відстань між літерами */
   color: #2e2f42; /* Колір тексту */
 }
-
+.team__wrapper {
+  padding: 32px 0;
+}
 .section-team-text {
   font-size: 16px;
   line-height: 1.5;
