--- a/css/styles.css
+++ b/css/styles.css
@@ -175,6 +175,8 @@ img {
   line-height: 1.2; /* Висота рядка */
   letter-spacing: 0.02em; /* Відстань між літерами */
   color: #2e2f42; /* Колір тексту */
+  text-align: center;
+  margin-bottom: 8px;
 }
 .team__wrapper {
   padding: 32px 0;
@@ -185,6 +187,7 @@ img {
   letter-spacing: 0.02em;
   color: #434455;
   font-weight: 400;
+  text-align: center;
 }
 .section-list {
   background-color: #ffffff;
