--- a/css/styles.css
+++ b/css/styles.css
@@ -224,7 +224,12 @@ img {
   color: #e7e9fc;
   background-color: #2e2f42; /* Фоновий колір футера */
 }
-
+.nav-gallery {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 48px;
+}
 .logo-footer {
   font-family: "Raleway";
   text-decoration: none;
