--- a/css/styles.css
+++ b/css/styles.css
@@ -237,7 +237,14 @@ img {
   line-height: 1.2;
   text-transform: uppercase;
 }
-
+.gallery__image {
+  width: calc((100% - 48px) / 3);
+}
+.gallery__wrapper {
+  border: 1px solid #e7e9fc;
+  border-top: none;
+  padding: 32px 16px;
+}
 .logo-header-white {
   color: #f4f4fd; /* Колір тексту */
 }
