--- a/css/styles.css
+++ b/css/styles.css
@@ -241,6 +241,7 @@ img {
   width: calc((100% - 48px) / 3);
 }
 .gallery__wrapper {
+  padding: 32px 16px;
   border: 1px solid #e7e9fc;
   border-top: none;
   padding: 32px 16px;
