--- a/css/styles.css
+++ b/css/styles.css
@@ -253,6 +253,7 @@ img {
 }
 .footer-text {
   color: #f4f4fd;
+  max-width: 264px;
 }
 .Dark-bg {
   background-color: #2e2f42; /* Фоновий колір для темної секції */
