--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,7 @@ img {
   text-decoration: none;
   line-height: 1.17;
   margin-right: 76px;
-  padding: 24px 0;
+  padding: 24px 0 24px;
 }
 
 .logo-header-blue {
